Add: discuss API route, reply API route, discuss query string API route, like count API route

--- a/frontend/page/discuss.ejs
+++ b/frontend/page/discuss.ejs
@@ -1,6 +1,9 @@
 <!-- Header -->
 <%- include("./discuss/discuss.header.ejs") %>
 
+<!-- Discuss Content Container -->
+<%- include("./discuss/discuss.show.ejs") %>
+
 <!-- Navigation Bar -->
 <%- include("./commons/common.navigation.ejs") %>
 
