Add: socket.io for chat message function, chat message history API route, chat message window

--- a/frontend/page/discuss/discuss.post.ejs
+++ b/frontend/page/discuss/discuss.post.ejs
@@ -14,12 +14,13 @@
         <!-- Post content -->
         <div class="discuss-title">
             <div class="discuss-title-user-profile">
-                <img id="discussMemberProfilePicture" class="discuss-title-user-profile-picture">
+                <img id="replyMemberProfilePicture" class="discuss-title-user-profile-picture">
             </div>
             <div class="discuss-title-user-content">
                 <div id="discussHeader" class="discuss-post-title"></div>
                 <div>
-                    <span id="discussMemberName"></span>
+                    <span style="color:rgb(2, 177, 247);">#1</span>
+                    <span id="replyMemberName"></span>
                     <span id="discussCreatedTime"></span>
                 </div>
             </div>
@@ -59,6 +60,9 @@
 
 <!-- Pagination bar -->
 <ul id="pagination" class="pagination mx-auto d-flex justify-content-center" style="max-width: 1200px;"></ul>
+
+<!-- Chat -->
+<div id="chatOuterContainer"></div>
 
 <!-- Separator -->
 <br/><br/><br/><br/>
