--- a/frontend/page/discuss/discuss.script.ejs
+++ b/frontend/page/discuss/discuss.script.ejs
@@ -3,6 +3,7 @@
 <script src="/js/lib/topbar.js"></script>
 <script type="text/javascript" src="/js/lib/froala-editor/js/froala_editor.pkgd.min.js"></script>
 <script type="text/javascript" src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script type="module" src="/js/discuss/discuss.main.js"></script>
 
 </body>
