--- a/frontend/page/member.ejs
+++ b/frontend/page/member.ejs
@@ -1,6 +1,9 @@
 <!-- Header -->
 <%- include("./member/member.header.ejs") %>
 
+<!-- Member Content Container -->
+<%- include("./member/member.show.ejs") %>
+
 <!-- Navigation Bar -->
 <%- include("./commons/common.navigation.ejs") %>
 
