Update: various pages layout alignment

--- a/frontend/page/add/add.drama.ejs
+++ b/frontend/page/add/add.drama.ejs
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row d-flex justify-content-center">
 
-                <div class="row g-3 col-lg-3 add-drama-left-bar-margin">
+                <div class="row g-lg-3 g-md-4 g-sm-4 mt-4 col-lg-3 add-drama-left-bar-margin">
                     <div class="add-drama-left-bar">
                         <div class="add-drama-left-bar-title">
                             <div>提供劇集資料注意事項</div>
@@ -17,7 +17,7 @@
                     </div>
                 </div>
 
-                <form class="row g-3 col-lg-9">
+                <form class="row g-3 col-lg-9 mt-4">
                     
                     <div class="col-lg-4 mb-2">
                         <label for="addDramaTitle" class="form-label">劇集名稱 (中文)</label>
