--- a/frontend/page/drama/drama.casts.ejs
+++ b/frontend/page/drama/drama.casts.ejs
@@ -4,7 +4,10 @@
     <img data-confirm-no-8 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit8" name="edit8" style="z-index:2; display:none"></img>    
 
     <div class="cast-header-width">
-        <div class="cast-header">主要演員</div>
+        <div class="cast-header">
+            <div>主要演員</div>
+            <div class="cast-header-underline"></div>
+        </div>
     </div>
 </div>
 <div class="cast-center">
