--- a/frontend/page/drama/drama.discuss.ejs
+++ b/frontend/page/drama/drama.discuss.ejs
@@ -1,6 +1,9 @@
 <div class="discuss-container">
     <div class="discuss-width">
-        <div class="discuss">討論區</div>
+        <div class="discuss">
+            <div>討論區</div>
+            <div class="discuss-header-underline"></div>
+        </div>
         
         <!-- Create post pop-up window -->
         <div id="discussLayer" class="discuss-layer"></div>
