--- a/frontend/page/drama/drama.introduction.ejs
+++ b/frontend/page/drama/drama.introduction.ejs
@@ -18,10 +18,12 @@
             <div id="dramaTitle" class="drama-details-title"></div>
 
             <!-- Drama Category -->
-            <div id="dramaCategory" class="drama-details-content-edit1"></div>
-            <img src="/img/icon_edit_black.png" id="edit1" class="individual-edit-btn" style="z-index:2; display:none"></img>
-            <img data-confirm-yes-1 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit1" name="edit1" style="z-index:2; display:none"></img>
-            <img data-confirm-no-1 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit1" name="edit1" style="z-index:2; display:none"></img>
+            <div class="d-flex align-items-center">
+                <div id="dramaCategory" class="drama-details-content-edit1"></div>
+                <img src="/img/icon_edit_black.png" id="edit1" class="individual-edit-btn" style="z-index:2; display:none"></img>    
+                <img data-confirm-yes-1 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit1" name="edit1" style="z-index:2; display:none"></img>
+                <img data-confirm-no-1 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit1" name="edit1" style="z-index:2; display:none"></img>
+            </div>
 
             <!-- Drama Introduction -->
             <div class="drama-details-brief-title">概要</div>
@@ -31,10 +33,12 @@
             <img data-confirm-no-2 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit2" name="edit2" style="z-index:2; display:none"></img>
 
             <!-- Drama TV -->
-            <div id="dramaTV" class="drama-details-content-edit3"></div>
-            <img src="/img/icon_edit_black.png" id="edit3" class="individual-edit-btn" style="z-index:2; display:none"></img>
-            <img data-confirm-yes-3 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit3" name="edit3" style="z-index:2; display:none"></img>
-            <img data-confirm-no-3 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit3" name="edit3" style="z-index:2; display:none"></img>
+            <div class="d-flex align-items-center">
+                <div id="dramaTV" class="drama-details-content-edit3"></div>
+                <img src="/img/icon_edit_black.png" id="edit3" class="individual-edit-btn" style="z-index:2; display:none"></img>
+                <img data-confirm-yes-3 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit3" name="edit3" style="z-index:2; display:none"></img>
+                <img data-confirm-no-3 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit3" name="edit3" style="z-index:2; display:none"></img>    
+            </div>
 
             <!-- Drama Date -->
             <ul>
