--- a/frontend/page/drama/drama.media.ejs
+++ b/frontend/page/drama/drama.media.ejs
@@ -2,6 +2,7 @@
     <div class="media-width">
         <div class="media">
             <div>媒體資訊</div>
+            <div class="media-header-underline"></div>
             <div style="display: flex; justify-content: center; align-items: center;">
                 <img src="/img/icon_edit_black.png" id="edit10" class="individual-edit-btn" style="z-index:2; display:none"></img>
                 <img data-confirm-yes-10 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit10" name="edit10" style="z-index:2; display:none"></img>
