--- a/frontend/page/index/index.timetable.ejs
+++ b/frontend/page/index/index.timetable.ejs
@@ -1,33 +1,36 @@
 <div class="timetable-container">
     <div class="timetable-width">
-        <div class="timetable-header">本季播放時間表</div>
+        <div class="timetable-header">
+            <div>本季播放時間表</div>
+            <div class="timetable-header-underline"></div>
+        </div>
         <div class="timetable">
             <div class="timetable-list">
-                <div class="timetable-list-header">星期一</div>
+                <div class="timetable-list-header">每週一</div>
                 <div id="timetableMonContainer"></div>
             </div>
             <div class="timetable-list">
-                <div class="timetable-list-header">星期二</div>
+                <div class="timetable-list-header">每週二</div>
                 <div id="timetableTueContainer"></div>
             </div>
             <div class="timetable-list">
-                <div class="timetable-list-header">星期三</div>
+                <div class="timetable-list-header">每週三</div>
                 <div id="timetableWedContainer"></div>
             </div>
             <div class="timetable-list">
-                <div class="timetable-list-header">星期四</div>
+                <div class="timetable-list-header">每週四</div>
                 <div id="timetableThurContainer"></div>
             </div>
             <div class="timetable-list">
-                <div class="timetable-list-header">星期五</div>
+                <div class="timetable-list-header">每週五</div>
                 <div id="timetableFriContainer"></div>
             </div>
             <div class="timetable-list">
-                <div class="timetable-list-header">星期六</div>
+                <div class="timetable-list-header">每週六</div>
                 <div id="timetableSatContainer"></div>
             </div>
             <div class="timetable-list">
-                <div class="timetable-list-header">星期日</div>
+                <div class="timetable-list-header">每週日</div>
                 <div id="timetableSunContainer"></div>
             </div>
         </div>
