--- a/frontend/page/drama/drama.rating.ejs
+++ b/frontend/page/drama/drama.rating.ejs
@@ -2,6 +2,7 @@
     <div class="rating-width">
         <div class="rating">
             <div>收視率</div>
+            <div class="rating-header-underline"></div>
             <div style="display: flex; justify-content: center; align-items: center;">
                 <img src="/img/icon_edit_black.png" id="edit9" class="individual-edit-btn" style="z-index:2; display:none"></img>
                 <img data-confirm-yes-9 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit9" name="edit9" style="z-index:2; display:none"></img>
