--- a/frontend/public/css/discuss.css
+++ b/frontend/public/css/discuss.css
@@ -241,7 +241,7 @@ blockquote {
 .chat-input {
     flex: auto;
     width: 85%;
-    height: 40px;
+    height: auto;
     padding: 5px;
     border-radius: 0px 0px 5px 5px;
     border: none;
@@ -249,6 +249,8 @@ blockquote {
     border-bottom: 1px solid rgba(128, 128, 128, 0.459);
     outline: none !important;
     background-color: #fff;
+    overflow-wrap: break-word;
+    padding-right: 65px;
 }
 
 .chat-send-btn {
@@ -342,19 +344,21 @@ blockquote {
 .chat-sender-container-left,
 .chat-receiver-container-right {
     flex: auto;
+    width: 30%;
 }
 
 .chat-sender-container-right {
     position: relative;
-    flex: none;
-    width: auto;
+    flex: auto;
+    width: 200px;
     display: flex;
     justify-content: right;
     align-items: center;
-    margin: 20px 20px 0px 15px;
+    margin: 10px 20px 10px 15px;
     padding: 5px;
     border-radius: 10px;
     background-color: rgba(8, 171, 235, 0.212);
+    overflow-wrap: break-word;
 }
 
 .chat-sender-container-right:before {
@@ -370,15 +374,16 @@ blockquote {
 
 .chat-receiver-container-left {
     position: relative;
-    flex: none;
-    width: auto;
+    flex: auto;
+    width: 200px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 20px 15px 0px 20px;
+    margin: 10px 15px 10px 20px;
     padding: 5px;
     border-radius: 10px;
     background-color: rgba(235, 129, 8, 0.212);
+    overflow-wrap: break-word;
 }
 
 .chat-receiver-container-left:before {
@@ -405,6 +410,7 @@ blockquote {
 .chat-receiver-message {
     margin: 0px 30px 0px 5px;
     font-size: 15px;
+    width: 70px;
 }
 
 .chat-sender-time,
@@ -420,7 +426,7 @@ blockquote {
     text-align: center;
     border-radius: 10px;
     font-size: 13px;
-    margin-top: 15px;
+    margin: 10px 0px 10px 0px;
     background-color: rgba(209, 206, 206, 0.39);
 }
 
@@ -448,11 +454,6 @@ blockquote {
         font-size: 14px;
     }
 
-    .chat-sender-profile-picture,
-    .chat-receiver-profile-picture {
-        display: none;
-    }
-    
     .chat-sender-message,
     .chat-receiver-message {
         margin: 0px 10px 0px 5px;
