--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -131,14 +131,27 @@
 
 .latest-drama-header {
     margin: 20px 10px 10px 10px;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bold;
 }
 
 .popular-drama-header {
     margin: 0px 10px 10px 10px;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bold;
+}
+
+.latest-drama-header-underline,
+.popular-drama-header-underline {
+    margin-top: 5px;
+    width: 175px;
+    border-bottom: 4px solid rgb(2, 177, 247)
+}
+
+.timetable-header-underline {
+    margin-top: 5px;
+    width: 153px;
+    border-bottom: 4px solid rgb(2, 177, 247)
 }
 
 .latest-drama-photo-container,
@@ -180,6 +193,19 @@
     transition: opacity 0.5s;
 }
 
+.latest-drama-photo-bottom-line {
+    position: relative;
+    bottom: -32px;
+    width: 100%;
+    height: 7px;
+    border-radius: 0px 0px 10px 10px;
+    background-color: rgba(2, 178, 247, 0.596);
+}
+
+.latest-drama-photo-bottom-line.long-title {
+    bottom: -4px;
+}
+
 .latest-drama-video {
     position: absolute;
     bottom: 55%;
@@ -199,7 +225,7 @@
 .popular-drama-photo-individual-title {
     margin: 10px;
     padding: 5px;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: bold;
     text-align: center;
 }
@@ -220,7 +246,7 @@
 
 .timetable-header {
     margin: 10px;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bold;
 }
 
@@ -235,7 +261,7 @@
     width: 100%;
     height: auto;
     margin: 10px;
-    font-size: 20px;
+    font-size: 18px;
     padding: 10px;
     border: 1px solid rgb(209, 206, 206);
     border-radius: 5px;
@@ -324,6 +350,13 @@
         height: 180px;
         object-fit: cover;
         border-radius: 5px;
+    }
+
+    .latest-drama-header-underline,
+    .popular-drama-header-underline,
+    .timetable-header-underline {
+        margin-top: 5px;
+        margin: auto;
     }
 
 }
