Update: tidy up ejs files and library links

--- a/frontend/page/latest/latest.list.ejs
+++ b/frontend/page/latest/latest.list.ejs
@@ -5,11 +5,7 @@
 </div>
 
 <div id="paginationContainer" class="pagination-container">
-    <ul id="lastestListPagination" class="pagination">
-        <!-- <li id="prevPage" class="page-item disabled">
-            <span class="page-link">上一頁</span>
-        </li> -->
-    </ul>
+    <ul id="lastestListPagination" class="pagination"></ul>
 
     <ul id="lastestSortlistPagination" class="pagination"></ul>
 
