--- a/frontend/page/discuss/discuss.script.ejs
+++ b/frontend/page/discuss/discuss.script.ejs
@@ -1,8 +1,8 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="/js/lib/jquery.js"></script>
+<script src="/js/lib/bootstrap/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="/js/lib/topbar.js"></script>
-<script type="text/javascript" src="/js/lib/froala-editor/js/froala_editor.pkgd.min.js"></script>
-<script type="text/javascript" src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
+<script src="/js/lib/froala-editor/js/froala_editor.pkgd.min.js"></script>
+<script src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="module" src="/js/discuss/discuss.main.js"></script>
 
