--- a/frontend/page/drama/drama.script.ejs
+++ b/frontend/page/drama/drama.script.ejs
@@ -1,20 +1,13 @@
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script> -->
 <script src="/js/lib/jquery.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script> -->
+<script src="/js/lib/bootstrap/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="/js/lib/chart.js"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0/dist/chartjs-plugin-datalabels.min.js"></script> -->
 <script src="/js/lib/chartjsPluginDatalabels.js"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@0.5.7/chartjs-plugin-annotation.min.js"></script> -->
 <script src="/js/lib/chartjsPluginAnnotation.js"></script>
-<!-- <script src="https://unpkg.com/fast-average-color/dist/index.browser.min.js"></script> -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script> -->
 <script src="/js/lib/hls.js"></script>
-<!-- <script src="/js/lib/tinymce/tinymce.min.js"></script> -->
-<script type="module" src="/js/drama/drama.main.js"></script>
-<script type="text/javascript" src="/js/lib/froala-editor/js/froala_editor.pkgd.min.js"></script>
-<script type="text/javascript" src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
+<script src="/js/lib/froala-editor/js/froala_editor.pkgd.min.js"></script>
+<script src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
 <script src="/js/lib/topbar.js"></script>
+<script type="module" src="/js/drama/drama.main.js"></script>
 
 </body>
 
