--- a/frontend/page/discuss/discuss.script.ejs
+++ b/frontend/page/discuss/discuss.script.ejs
@@ -5,6 +5,14 @@
 <script src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="module" src="/js/discuss/discuss.main.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P69DN7D25D"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag("js", new Date());
+
+    gtag("config", "G-P69DN7D25D");
+</script>
 
 </body>
 
