--- a/frontend/page/drama/drama.script.ejs
+++ b/frontend/page/drama/drama.script.ejs
@@ -8,6 +8,14 @@
 <script src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
 <script src="/js/lib/topbar.js"></script>
 <script type="module" src="/js/drama/drama.main.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P69DN7D25D"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag("js", new Date());
+
+    gtag("config", "G-P69DN7D25D");
+</script>
 
 </body>
 
