--- a/frontend/page/index/index.script.ejs
+++ b/frontend/page/index/index.script.ejs
@@ -2,6 +2,14 @@
 <script src="js/lib/bootstrap/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="js/lib/topbar.js"></script>
 <script type="module" src="js/index/index.main.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P69DN7D25D"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag("js", new Date());
+
+    gtag("config", "G-P69DN7D25D");
+</script>
 
 </body>
 
