Add: header icons and CSS in index page

--- a/frontend/page/index/index.latestDramaList.ejs
+++ b/frontend/page/index/index.latestDramaList.ejs
@@ -1,7 +1,10 @@
 <div class="latest-drama-container">
     <div class="latest-drama-width">
         <div class="latest-drama-header">
-            <div>本季最新日本劇集</div>
+            <div class="latest-drama-header-text-container">
+                <img class="latest-drama-header-icon" src="/img/icon_latest.png">
+                <a href="/latest">本季最新日本劇集</a>
+            </div>
             <div class="latest-drama-header-underline"></div>
         </div>
         <div id="latestDramaPhotoContainer" class="latest-drama-photo-container"></div>
