--- a/frontend/page/index/index.popularDramaList.ejs
+++ b/frontend/page/index/index.popularDramaList.ejs
@@ -1,7 +1,10 @@
 <div class="popular-drama-container">
     <div class="popular-drama-width">
         <div class="popular-drama-header">
-            <div>最受歡迎日本劇集</div>
+            <div class="popular-drama-header-text-container">
+                <img class="popular-drama-header-icon" src="/img/icon_popular.png">
+                <a href="/latest">最受歡迎日本劇集</a>
+            </div>
             <div class="popular-drama-header-underline"></div>
         </div>
         <div id="popularDramaPhotoContainer" class="popular-drama-photo-container"></div>
