--- a/frontend/page/index/index.timetable.ejs
+++ b/frontend/page/index/index.timetable.ejs
@@ -1,7 +1,10 @@
 <div class="timetable-container">
     <div class="timetable-width">
         <div class="timetable-header">
-            <div>本季播放時間表</div>
+            <div class="timetable-drama-header-text-container">
+                <img class="timetable-drama-header-icon" src="/img/icon_timetable.png">
+                <a href="/latest">本季播放時間表</a>
+            </div>
             <div class="timetable-header-underline"></div>
         </div>
         <div class="timetable">
